--- a/css/common.css
+++ b/css/common.css
@@ -1,21 +1,37 @@
 @charset "utf-8";
+:root {
+    --custom-color1: #76453B;
+    --custom-color2: #000000;
+    --custom-color3: #F8FAE5;
+    --custom-color4: #fff;
+}
 /*HEADER*/
 #bgheader{
     background-color: #bebebe;
     height: 40px;
 }
 #phone, #email, #searchbox, #icons{
-    background-color: #f9aaaa;
-    border: solid 1pt #771f1f;
     height: 40px;
+    color: var(--custom-color4);
+    vertical-align: middle;
+    line-height: 35px;
 }
 /*Navi*/
 #bgnavi{
-    background-color: black;
+    background-color: var(--custom-color3);
     height: 80px;
 }
 #logo, #navi{
-    background-color: #bff4bf;
-    border: solid 1pt #0c460c;
+    /* background-color: #bff4bf; */
     height: 80px;
+    display: flex;
+    justify-content: space-between;
+    line-height: 70px;
+}
+#navi > div {
+    flex: 1;
+    text-align: center;
+}
+#additionalImage{
+    border: solid 1pt #000000;
 }
