--- a/css/layout_raw_vintage.css
+++ b/css/layout_raw_vintage.css
@@ -30,7 +30,7 @@
 }
 
 #newcoll{
-    background-color: #F8FAE5;
+    background-color: #FFFFFF;
 }
 
 #ACCESSORIES{
@@ -82,7 +82,128 @@
     padding-left: 0;
     padding-right: 0;
   }
+
+  .custom-button{
+    font-weight: bold;
+    font-size: 20px;
+    border-width: 2px;
+    border-radius: 50px;
+    background-color: #76453b;
+    border-color: #FFFFFF;
+    color: #FFFFFF;
+    padding: 5px 20px 5px 20px;
+  }
+
+  .custom-button:hover {
+    background-color: #FFFFFF;
+    border-color: #76453b;
+    color: #76453b;
+  }
+  .custom-button-2{
+    font-weight: bold;
+    font-size: 16px;
+    border-width: 2px;
+    background-color: #76453b;
+    border-radius: 50px 50px;
+    border-color: #FFFFFF;
+    color: #FFFFFF;
+    padding: 10px 20px 10px 20px;
+  }
+
+  .custom-button-2:hover {
+    background-color: #FFFFFF;
+    border-color: #76453b;
+    color: #76453b;
+  }
+
+  .logo-bottom{
+    background-color: #F8FAE5;
+    border-radius: 100px;
+    padding: 20px 40px;
+  }
   
+  .img-size{
+    height: 325px;
+    width: 100%;
+    transition: .5;
+    filter: brightness(50%);
+  }
+
+  .img-size-hover:hover {
+    transform: scale(0.9);
+}
+.img-size-hover:hover .number {
+    visibility: hidden;
+}
+
+.img-size-hover:hover .watch {
+    visibility: visible;
+}
+
+.watch {
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+    padding: 10px 5px;
+    opacity: 50%;
+    visibility: hidden;
+}
+
+#gloves{
+    width: 350px;
+    height: 350px;
+}
+
+#glasses{
+    width: 255px;
+    height: 255px; 
+}
+
+#covered{
+    width: 255px;
+    height: 255px;
+}
+
+.o-5{
+    filter: opacity(50%); 
+}
+
+
+.vl {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-right: 3px solid #76453b;
+    height: 40px;
+    position: relative;
+    right: 50%;
+    top: 0;
+  }
+
+
+  .number{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .rhombus{
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    position: relative;
+    width: 100px;
+    height: 100px;
+    left: 3px;
+    top: 3px;
+    background-color: #000000;
+    color: #FFFFFF;
+    opacity: 100%;
+  }
+  
+  .rhombus-parent {
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    background: #FFFFFF;
+    width: 106px;
+    height: 106px;
+    opacity: 50%;
+  }
 /********** Template CSS **********/
 :root {
     --primary: #FEA116;
@@ -304,6 +425,10 @@
 /*** Food Menu ***/
 .nav-pills .nav-item .active {
     border-bottom: 2px solid var(--primary);
+}
+
+.nav-item h4:hover {
+    color:#76453b
 }
 
 
