--- a/css/layout_2.css
+++ b/css/layout_2.css
@@ -54,10 +54,48 @@
   }
 
   .logo-bottom{
-    background-color: #F8FAE5;
     border-radius: 100px;
     padding: 20px 40px;
   }
+
+  .custom-btn{
+    border: 1px solid #000000;
+    border-radius: 50px;
+    background-color: #F8FAE5;
+  }
+  .btn-buy{
+    border: 1px solid #000000;
+    border-radius: 50px;
+    background-color: #fd7600;
+    color: #FFFFFF;
+  }
+
+  .hl {
+      border-bottom: 1px solid #000000;
+      position: relative;
+    }
+
+    
+    .heading-1{
+      position:relative;
+      text-align: center
+    }
+    .heading-1:before {
+      content: "";
+      display: block;
+      border-top: solid 1px #000000;
+      width: 100%;
+      height: 2px;
+      position: absolute;
+      top: 50%;
+      z-index: 0;
+    }
+    .heading-1 span {
+      background: #fff;
+      padding: 0 10px;
+      position: relative;
+      z-index: 1;
+    }
 
   
 /********** Template CSS **********/
